fix mailing list submit issues and aligned submit text

--- a/sbhacks-viii-frontend/src/styles/MailingList.css
+++ b/sbhacks-viii-frontend/src/styles/MailingList.css
@@ -112,9 +112,14 @@
     grid-column: 1/2;
     grid-row: 3/4;
 }
+.submitFishButton {
+    position: relative;
+}
 #submitTxt {
     position: absolute;
-    transform: translateY(80%) translateX(-12%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-60%, -60%);
     font-size: .7em;
     color: var(--submit);
     transition: 0.3s;
@@ -131,7 +136,7 @@
 #submitFish {
     width: 30%;
     transition: 0.3s;
-
+    vertical-align: middle;
     /* margin: auto; */
     /* z-index: 100; */
 } 
